Fixed lightbg and darkbg layout on small paragraphs

--- a/css/source/custom/layouts.scss
+++ b/css/source/custom/layouts.scss
@@ -72,9 +72,8 @@ body.reveal-ready {
     color: #fff;
     padding: 1rem;
     border-radius: 8px;
-    display: inline-block;
-    line-height: 1.5;
-    font-weight: 300;
+    width: fit-content;
+    margin: 1rem auto;
   }
   
   section[data-lightbg] p,
@@ -83,10 +82,8 @@ body.reveal-ready {
     color: #000;
     padding: 1rem;
     border-radius: 8px;
-    display: inline-block;
-    line-height: 1.5;
-    font-weight: 300;
-    text-shadow: 1px 1px #ccc;
+    width: fit-content;
+    margin: 1rem auto;
   }
 
   section[data-lightbg] ul,
